<resources>
    <string name="app_name">Eye Exercises</string>
    <string name="welcome_name">Eye\nExercises</string>

    <string name="title_activity_main_menu">Eye Exercises</string>
    <string name="title_activity_finish_training">FinishTraining</string>
    <string name="title_activity_statistics">StatisticsAct</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="start_training">Почати тренування</string>
    <string name="setting">Налаштування</string>
    <string name="statistic">Статистика</string>

    <string name="finish_training_text">Ви чудово впорались із завданням!\n
Рекомендуємо проводити тренування щогодини!\n
Бажаємо Вам хороших занять!\nБережіть очі!</string>

    <string name="ок">ОК</string>
    <string name="Notification">Нагадати про тренування через</string>

    <string name="nav_notification">Нагадування</string>
    <string name="title_statistics">Статистика</string>
    <string name="myTrainingStat">Мої тренування</string>

    <string name="userTraining">Ви тренуєтесь в середньому:</string>
    <string name="adviveToTraining">Рекомендовано тренуватись:</string>
    <string name="one_hour">1 раз в годину</string>
    <string name="clearStatistics">Очистити статистику</string>

    <string name="notification">Нагадування</string>
    <string name="notification_advice">Рекомендовано тренуватись кожної години</string>
    <string name="тщеша">Нагадувати про тренування кожних:</string>

    <string name="change">Змінити</string>
    <string name="time_notification">Налаштування нагадування</string>

    <string name="hour1">1 година</string>
    <string name="hour2">2 години</string>
    <string name="hour3">3 години</string>
    <string name="hour4">4 години</string>
    <string name="hour5">5 годин</string>
    <string name="hour6">6 годин</string>
    <string name="hourNever">ніколи</string>

    <string name="hour_1">годину</string>
    <string name="hour_2">години</string>
    <string name="hour_5">годин</string>

    <string name="notification1">Ми нагадаємо Вам про тренування через</string>
    <string name="notification_never">У Вас відключені нагадування</string>

    <string name="close_eyes">Закрийте очі до сигналу або кліпайте</string>
    <string name="relax">Розслабтесь</string>
    <string name="up_and_down">Вверх-вниз</string>
    <string name="follow_the_pointer">Слідкуйте очима за вказівником</string>
    <string name="left_and_right">Вправо-вліво</string>
    <string name="trajectory_rectangle">Траєкторія прямокутник</string>
    <string name="trajectory_rectangle_vice_verca">Траєкторія прямокутник(в інший бік)</string>
    <string name="look_at_distance_object">Подивіться на предмет, який знаходиться на відстані 5-10 метрів від Вас</string>
    <string name="look_at_subject_to_sound">Розглядайте предмет до сигналу</string>

    <string name="no_trainning">Ви ще не тренувались\nРозпочніть своє перше тренування</string>
    <string name="not_search_trainning">не знайдено жодного тренування</string>
    <string name="time_to_training">Час тренувати очі!</string>

    <string name="day_1">день</string>
    <string name="day_2">днів</string>
    <string name="day_3">дні</string>

    <string name="week_1">тиждень</string>
    <string name="week_2">тижні</string>

    <string name="mounth_1">місяць</string>
    <string name="mounth_2">місяці</string>
    <string name="mounth_3">місяців</string>

    <string name="year_1">рік</string>
    <string name="year_2">роки</string>
    <string name="year_3">років</string>

    <string name="trainingOnce">ви тренувались тільки 1 раз</string>
    <string name="more_than_once">частіше, ніж 1 раз в годину</string>
    <string name="once">1 раз в</string>

    <string name="training_1">Ви тренувались менш, ніж годину тому.\nТак тримати!\n</string>
    <string name="we_done">ВИ МОЛОДЕЦЬ!!!</string>
    <string name="go_training">\nТРЕНУЙТЕСЬ ЧАСТІШЕ!!!</string>
    <string name="we_training">Ви тренувались</string>
    <string name="because">тому</string>


</resources>
