<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.vovatkach2427gmail.eyeexercises.activity.ActivityStatistics">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/userTraining"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvUserTraining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adviveToTraining"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_hour"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
                </LinearLayout>
           <android.support.v7.widget.Toolbar
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:layout_gravity="bottom"
               app:contentInsetEnd="0dp"
               app:contentInsetLeft="0dp"
               app:contentInsetRight="0dp"
               app:contentInsetStart="0dp"
               app:layout_collapseMode="pin"
               >
               <android.support.v7.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:cardBackgroundColor="@color/colorAccent"
                   android:layout_margin="5dp"
                   app:cardCornerRadius="7dp"
                   >
                   <LinearLayout
                       android:id="@+id/flBackground"
                       android:orientation="vertical"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent">
                       <Button
                           android:id="@+id/btnClearStatistics"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_margin="3dp"
                           android:text="@string/clearStatistics"
                           android:layout_weight="1"/>
                       <TextView
                           android:id="@+id/tvDateStatistics"
                           android:layout_width="match_parent"
                           android:textSize="17sp"
                           android:layout_height="wrap_content"
                           android:textColor="@color/colorWhite"
                           android:text="@string/myTrainingStat"
                           android:textAlignment="center"
                           android:layout_margin="7dp"/>
                   </LinearLayout>
               </android.support.v7.widget.CardView>
           </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/list_stat" />
</android.support.design.widget.CoordinatorLayout>
